Fix background in vertical overflow
This reverts commit 297af4064eb9759ac927ec164c660cc2cbe4d4e1.

--- a/theme/csc-plain/csc.css
+++ b/theme/csc-plain/csc.css
@@ -47,8 +47,8 @@
 
 .slide-background {
   background-image:    url("img/normal.svg");
-  background-repeat:   repeat-y;
-  background-position: bottom;
+  background-repeat:   no-repeat;
+  background-position: center;
   background-size:     contain;
 }
 
